--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,10 @@
 language: node_js
 node_js:
   - '9'
+before_install:
+  - curl -o- -L https://yarnpkg.com/install.sh | bash -s -- --version 1.9.4
+  - export PATH="$HOME/.yarn/bin:$PATH"
 cache:
   yarn: true
-script: "npm install --save-dev && npm run test"
-after_script: "npm run test -- --coverage"
+script: "yarn install --dev && yarn run test"
+after_script: "yarn run ci"
